--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
@@ -10,11 +11,13 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
