--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
