--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.8.2",
     "@mui/styles": "^5.8.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
